edits styles for list-item traffic light

--- a/ui/controls/list.reel/list-item.reel/list-item.html
+++ b/ui/controls/list.reel/list-item.reel/list-item.html
@@ -44,7 +44,7 @@
 <body>
     <div data-montage-id="owner" class="ListItem">
         <div data-param="*"></div>
-        <div data-montage-id="status"></div>
+        <div data-montage-id="status" class="ListItem-status"></div>
         <div data-montage-id="iconImagePlaceholder" class="ListItem-icon"></div>
         <div data-montage-id="label" class="ListItem-label"></div>
         <div class="ListItem-arrow">
