--- a/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
+++ b/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
@@ -22,10 +22,10 @@
                 "pattern": "T"
             }
         },
-        "host": {
+        "hostStatus": {
             "prototype": "ui/controls/traffic-light.reel",
             "properties": {
-                "element": {"#": "host"},
+                "element": {"#": "hostStatus"},
                 "colorMapping": {
                     "CONNECTED": "green",
                     "CONNECTING": "yellow",
@@ -33,8 +33,16 @@
                 }
             },
             "bindings": {
-                "text": {"<-": "@owner.session.host.replace(@owner.dotRegEx, '. ')"},
                 "value": {"<-": "@owner.application.dataService.backendBridge.connectionStatus"}
+            }
+        },
+        "host": {
+            "prototype": "montage/ui/text.reel",
+            "properties": {
+                "element": {"#": "host"}
+            },
+            "bindings": {
+                "value": {"<-": "@owner.session.host.replace(@owner.dotRegEx, '. ')"}
             }
         },
         "date": {
@@ -62,6 +70,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="CurrentUserSummary">
+        <div data-montage-id="hostStatus" class="CurrentUserSummary-hostStatus"></div>
         <div data-montage-id="host" class="CurrentUserSummary-host"></div>
         <div class="CurrentUserSummary-time">
             <div data-montage-id="date"></div>
