--- a/ui/controls/field-treeview.reel/field-treeview.html
+++ b/ui/controls/field-treeview.reel/field-treeview.html
@@ -10,7 +10,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "classList.has('isExpanded')": {"<-": "@owner.isExpanded"}
+                "classList.has('is-expanded')": {"<-": "@owner.isExpanded"}
             }
         },
         "field": {
