Fix regression related to 3143e08912ec4d1b0020319d68dd6d9f3918473f

--- a/ui/network/configuration.reel/interface-overview-item.reel/interface-overview-item.html
+++ b/ui/network/configuration.reel/interface-overview-item.reel/interface-overview-item.html
@@ -56,13 +56,13 @@
             }
         },
         "status": {
-            "prototype": "ui/controls/link-status.reel",
+            "prototype": "ui/controls/traffic-light.reel",
             "properties": {
                 "element": {"#": "status"}
             },
             "bindings": {
-                "status": {"<-": "@owner.object.link_state"},
-                "enabledState": {"<-": "@owner.object.enabled"}
+                "colorMapping": {"<-": "@owner.userInterfaceDescriptor.statusColorMapping"},
+                "value": {"<-": "@owner.object.path(@owner.userInterfaceDescriptor.statusValueExpression)"}
             }
         }
     }
