--- a/ui/controls/interface-overview.reel/interface-overview.html
+++ b/ui/controls/interface-overview.reel/interface-overview.html
@@ -38,14 +38,14 @@
                 "value": {"<-": "@owner.object.id"}
             }
         },
-        "linkStatus": {
-            "prototype": "ui/controls/link-status.reel",
+         "status": {
+            "prototype": "ui/controls/traffic-light.reel",
             "properties": {
-                "element": {"#": "linkStatus"}
+                "element": {"#": "status"}
             },
             "bindings": {
-                "status": {"<-": "@owner.object.status.link_state"},
-                "enabledState": {"<-": "@owner.object.enabled"}
+                "colorMapping": {"<-": "@owner.userInterfaceDescriptor.statusColorMapping"},
+                "value": {"<-": "@owner.object.path(@owner.userInterfaceDescriptor.statusValueExpression)"}
             }
         }
     }
@@ -59,7 +59,7 @@
                 <span data-montage-id="name"></span>
                 <span data-montage-id="media_type" class="InterfaceOverview-type"></span>
             </p>
-            <div data-montage-id="linkStatus"></div>
+            <div data-montage-id="status"></div>
         </div>
     </div>
 </body>
