Remove redundant delete confirmation messages
Ticket: #17179

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -29,8 +29,7 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "isLoading": {"<-": "!@owner.object"},
-                "confirmationMessage": {"<-": "'Are you sure you want to delete scheduled task ' + @owner.object.name + '?'"}
+                "isLoading": {"<-": "!@owner.object"}
             }
         },
         "type": {
