--- a/ui/inspectors/container.reel/container.html
+++ b/ui/inspectors/container.reel/container.html
@@ -63,8 +63,7 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "context": {"<-": "@owner.context"},
-                "confirmationMessage": {"<-": "'Are you sure you want to delete container ' + @owner.object.names.0 + '?'"}
+                "context": {"<-": "@owner.context"}
             }
         },
 
