--- a/ui/inspectors/share.reel/share.html
+++ b/ui/inspectors/share.reel/share.html
@@ -62,8 +62,7 @@
             },
             "bindings": {
                 "canDelete": {"<-": "!@owner.object._isNew"},
-                "context": {"<-": "@owner.context"},
-                "confirmationMessage": {"<-": "'Are you sure you want to delete share ' + @owner.object.name + '?'"}
+                "context": {"<-": "@owner.context"}
             }
         },
         "overview": {
