--- a/ui/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/inspectors/virtual-machine.reel/virtual-machine.html
@@ -30,8 +30,7 @@
             "bindings": {
                 "context": {"<-": "@owner.context"},
                 "canDelete": {"<-": "!@owner.object._isNew"},
-                "classList.has('has-loading-spinner')": {"<-": "@owner.isLoading"},
-                "confirmationMessage": {"<-": "'Are you sure you want to delete virtual machine ' + @owner.object.name + '?'"}
+                "classList.has('has-loading-spinner')": {"<-": "@owner.isLoading"}
             }
         },
         "stateCondition": {
