--- a/ui/inspectors/volume.reel/volume.html
+++ b/ui/inspectors/volume.reel/volume.html
@@ -49,8 +49,7 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "isConfirmationVisible": {"<-": "@owner.isConfirmationVisible"},
-                "confirmationMessage": {"<-": "'Are you sure you want to delete volume ' + @owner.object.id + '?'"}
+                "isConfirmationVisible": {"<-": "@owner.isConfirmationVisible"}
             }
         },
         "shares": {
