--- a/ui/inspectors/snapshot.reel/snapshot.html
+++ b/ui/inspectors/snapshot.reel/snapshot.html
@@ -45,8 +45,7 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "context": {"<-": "@owner.context"},
-                "confirmationMessage": {"<-": "'Are you sure you want to delete snapshot ' + @owner.object.id + '?'"}
+                "context": {"<-": "@owner.context"}
             }
         },
         "name": {
