Update custom deletion confirmation message for detached volumes
Ticket: #17179

--- a/ui/inspectors/detached-volume.reel/detached-volume.html
+++ b/ui/inspectors/detached-volume.reel/detached-volume.html
@@ -26,7 +26,7 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "confirmationMessage": {"<-": "'Are you sure you want to erase disks previously used in volume ' + @owner.object.name +'?'"}
+                "confirmDeleteMessage": {"<-": "'Are you sure you want to erase disks previously used in volume ' + @owner.object.name +'?'"}
             }
         },
         "topology": {
