Add confirmation message on deletion
Ticket: #17179

--- a/ui/inspectors/container.reel/container.html
+++ b/ui/inspectors/container.reel/container.html
@@ -59,7 +59,8 @@
                 "element": {"#": "inspector"},
                 "canSave": false,
                 "canRevert": false,
-                "canDelete": true
+                "canDelete": true,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
