--- a/ui/inspectors/snapshot.reel/snapshot.html
+++ b/ui/inspectors/snapshot.reel/snapshot.html
@@ -41,7 +41,8 @@
                 "keys": [
                     "name",
                     "dataset"
-                ]
+                ],
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
