--- a/ui/inspectors/system-section.reel/system-section.html
+++ b/ui/inspectors/system-section.reel/system-section.html
@@ -23,7 +23,8 @@
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
-                "canDelete": false
+                "canDelete": false,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
