--- a/ui/inspectors/group.reel/group.html
+++ b/ui/inspectors/group.reel/group.html
@@ -13,7 +13,8 @@
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
-                "element": {"#": "inspector"}
+                "element": {"#": "inspector"},
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
