--- a/ui/inspectors/network-configuration.reel/network-configuration.html
+++ b/ui/inspectors/network-configuration.reel/network-configuration.html
@@ -18,7 +18,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "canSave": true,
-                "canRevert": true
+                "canRevert": true,
+                "controller": {"@": "owner"}
             }
         },
         "hostname": {
