--- a/ui/inspectors/network-interface-creator.reel/network-interface-creator.html
+++ b/ui/inspectors/network-interface-creator.reel/network-interface-creator.html
@@ -14,7 +14,8 @@
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
-                "isFooterHidden": true
+                "isFooterHidden": true,
+                "controller": {"@": "owner"}
             }
         },
         "createVlan": {
