--- a/ui/inspectors/service.reel/service.html
+++ b/ui/inspectors/service.reel/service.html
@@ -20,7 +20,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "canRevert": "true",
-                "canSave": "true"
+                "canSave": "true",
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
