--- a/ui/inspectors/services-category.reel/share.html
+++ b/ui/inspectors/services-category.reel/share.html
@@ -16,7 +16,8 @@
                 "element": {"#": "inspector"},
                 "canDelete": "true",
                 "canRevert": "true",
-                "canSave": "true"
+                "canSave": "true",
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
