--- a/ui/inspectors/share.reel/share.html
+++ b/ui/inspectors/share.reel/share.html
@@ -57,7 +57,8 @@
                     "name",
                     "type",
                     "target_type"
-                ]
+                ],
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "canDelete": {"<-": "!@owner.object._isNew"},
