--- a/ui/inspectors/topology.reel/topology.html
+++ b/ui/inspectors/topology.reel/topology.html
@@ -21,7 +21,8 @@
                 "element": {"#": "inspector"},
                 "canDelete": true,
                 "canRevert": true,
-                "canSave": true
+                "canSave": true,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "isLocked": {"<->": "@owner.isLocked"}
