--- a/ui/inspectors/virtual-machine-volume.reel/virtual-machine-volume.html
+++ b/ui/inspectors/virtual-machine-volume.reel/virtual-machine-volume.html
@@ -22,7 +22,8 @@
                 "element": {"#": "inspector"},
                 "canSave": false,
                 "canRevert": false,
-                "canDelete": false
+                "canDelete": false,
+                "controller": {"@": "owner"}
             }
         },
         "selectOptionConverter": {
