--- a/ui/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/inspectors/virtual-machine.reel/virtual-machine.html
@@ -24,7 +24,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "canSave": true,
-                "canRevert": true
+                "canRevert": true,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
