--- a/ui/inspectors/volume-creator.reel/volume-creator.html
+++ b/ui/inspectors/volume-creator.reel/volume-creator.html
@@ -20,7 +20,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "canRevert": true,
-                "scrollViewDelegate": {"@": "owner"}
+                "scrollViewDelegate": {"@": "owner"},
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
