--- a/ui/sections/peering/inspectors/peer.reel/peer.html
+++ b/ui/sections/peering/inspectors/peer.reel/peer.html
@@ -20,7 +20,8 @@
                 "element": {"#": "inspector"},
                 "canSave": true,
                 "canRevert": true,
-                "canDelete": true
+                "canDelete": true,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
