--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -24,7 +24,8 @@
                 "element": {"#": "inspector"},
                 "canDelete": true,
                 "canRevert": true,
-                "canSave": true
+                "canSave": true,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
