--- a/ui/inspectors/directory-services.reel/directory-service.reel/directory-service.html
+++ b/ui/inspectors/directory-services.reel/directory-service.reel/directory-service.html
@@ -26,7 +26,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "canRevert":    true,
-                "canSave":      true
+                "canSave":      true,
+                "controller":   {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
