--- a/ui/inspectors/disk.reel/disk.html
+++ b/ui/inspectors/disk.reel/disk.html
@@ -40,7 +40,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "canRevert": true,
-                "canSave": true
+                "canSave": true,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
