--- a/ui/inspectors/inspector.reel/inspector-confirmation.reel/inspector-confirmation.html
+++ b/ui/inspectors/inspector.reel/inspector-confirmation.reel/inspector-confirmation.html
@@ -8,15 +8,35 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
-            }
+            },
+            "listeners": [
+                {
+                    "type": "action",
+                    "listener": {"@": "owner"}
+                }
+            ]
         },
-        "confirmationMessage": {
+        "confirmDeleteMessage": {
             "prototype": "montage/ui/text.reel",
             "properties": {
-                "element": {"#": "confirmationMessage"}
+                "element": {"#": "confirmDeleteMessage"}
             },
             "bindings": {
-                "value": {"<-": "@owner.confirmationMessage"}
+                "value": {"<-": "@owner.confirmDeleteMessage"}
+            }
+        },
+        "confirmDelete": {
+            "prototype": "blue-shark/ui/button.reel",
+            "properties": {
+                "element": {"#": "confirmDelete"},
+                "value": "Delete"
+            }
+        },
+        "cancelDelete": {
+            "prototype": "blue-shark/ui/button.reel",
+            "properties": {
+                "element": {"#": "cancelDelete"},
+                "value": "Cancel"
             }
         }
     }
@@ -24,8 +44,11 @@
 </head>
 <body>
     <div data-montage-id="owner" class="InspectorConfirmation">
-        <div data-montage-id="confirmationMessage" class="InspectorConfirmation-message"></div>
-        <div data-param="*" class="InspectorConfirmation-actions"></div>
+        <div data-montage-id="confirmDeleteMessage" class="InspectorConfirmation-message"></div>
+        <div class="InspectorConfirmation-actions">
+            <div data-montage-id="confirmDelete" class="Button--alert"></div>
+            <div data-montage-id="cancelDelete"></div>
+        </div>
     </div>
 </body>
 </html>
