--- a/ui/inspectors/network-interface.reel/network-interface.html
+++ b/ui/inspectors/network-interface.reel/network-interface.html
@@ -19,7 +19,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "canRevert": "true",
-                "canSave": "true"
+                "canSave": "true",
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
