Add missing errorMessage element in inspector

--- a/ui/inspectors/inspector.reel/inspector.html
+++ b/ui/inspectors/inspector.reel/inspector.html
@@ -85,6 +85,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="Inspector">
+        <div data-montage-id="errorMessage" class="Inspector-error"></div>
         <div class="Inspector-locked">
             <div data-montage-id="lockMessage"></div>
         </div>
