--- a/ui/dashboard/widgets/widget.reel/widget.html
+++ b/ui/dashboard/widgets/widget.reel/widget.html
@@ -6,17 +6,11 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"},
-                "sizeOptions": [
-                    {"value": "small"},
-                    {"value": "medium"},
-                    {"value": "large"}
-                ]
+                "element": {"#": "owner"}
             },
             "bindings": {
                 "classList.has('flip')": {"<-": "this.isFlipped"},
-                "classList.has('has-settings')": {"<-": "@owner.hasSettings"},
-                "size": {"<-": "@sizeSelector.selectedValue"}
+                "classList.has('has-settings')": {"<-": "@owner.hasSettings"}
             }
         },
 
@@ -52,17 +46,6 @@
             "bindings": {
                 "value": {"<-": "@owner.settingsLabel.defined() ? @owner.settingsLabel : 'Settings'"}
             }
-        },
-
-        "sizeSelector": {
-            "prototype": "blue-shark/ui/select.reel",
-            "properties": {
-                "element": {"#": "sizeSelector"},
-                "selectedValue": "medium"
-            },
-            "bindings": {
-                "options": {"<-": "@owner.sizeOptions.map{value}"}
-            }
         }
     }
     </script>
@@ -76,7 +59,6 @@
                     <div data-param="widget-content" class="Widget-content-front"></div>
                 </div>
                 <div data-montage-id="infoWidgetButton" class="Widget-info Button--primary"></div>
-                <div data-montage-id="sizeSelector" class="Widget-sizeSelector"></div>
             </div>
             <div class="Widget-back">
                 <div class="Widget-header">
