Add support for a custom label on dashboard widget settings
Ticket: #17630

--- a/ui/dashboard/widgets/widget.reel/widget.html
+++ b/ui/dashboard/widgets/widget.reel/widget.html
@@ -44,7 +44,7 @@
                 "element": {"#": "settingsTitle"}
             },
             "bindings": {
-                "value": {"<-": "'WidgetName-Settings'"}
+                "value": {"<-": "@owner.settingsLabel.defined() ? @owner.settingsLabel : 'Settings'"}
             }
         }
     }
