--- a/ui/inspectors/system-section.reel/system.reel/system.html
+++ b/ui/inspectors/system-section.reel/system.reel/system.html
@@ -20,6 +20,27 @@
                 "value": {"<->": "@owner.systemGeneralData.hostname"}
             }
         },
+        "description": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "description"},
+                "label": "Description"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.systemGeneralData.description"}
+            }
+        },
+        "tags": {
+            "prototype": "blue-shark/ui/field-multiple-select.reel",
+            "properties": {
+                "element": {"#": "tags"},
+                "label": "Tags",
+                "labelPath": "this"
+            },
+            "bindings": {
+                "values": {"<->": "@owner.systemGeneralData.tags"}
+            }
+        },
         "syslog_server": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
@@ -81,6 +102,8 @@
         <div data-montage-id="factoryRestore" ></div>
         <div data-montage-id="noOperation" class="Updates-noOperation"></div>
         <div data-montage-id="hostname"></div>
+        <div data-montage-id="description"></div>
+        <div data-montage-id="tags"></div>
         <div data-montage-id="syslog_server"></div>
         <div data-montage-id="powerd"></div>
         <div data-montage-id="error_uploads"></div>
