Correct label for DNS Search Domains
Reported by @jceel

--- a/ui/inspectors/network-configuration.reel/network-configuration.html
+++ b/ui/inspectors/network-configuration.reel/network-configuration.html
@@ -190,7 +190,7 @@
             "prototype": "blue-shark/ui/field-multiple-select.reel",
             "properties": {
                 "element": {"#": "dns_search"},
-                "label": "Search Addresses",
+                "label": "Search Domains",
                 "labelPath": "this",
                 "isDraggable": true
             },
