UPDATED: bind object to values property

--- a/ui/inspectors/share.reel/smb-share.reel/smb-share.html
+++ b/ui/inspectors/share.reel/smb-share.reel/smb-share.html
@@ -105,7 +105,7 @@
                 "placeholderValue": "vfs value"
             },
             "bindings": {
-                "value": {"<->": "@owner.properties.vfs_objects"}
+                "values": {"<->": "@owner.properties.vfs_objects"}
             }
         },
         "advancedSection": {
