Use multiple-select for smb share vfs_object property
Ticket: #17601

--- a/ui/inspectors/share.reel/smb-share.reel/smb-share.html
+++ b/ui/inspectors/share.reel/smb-share.reel/smb-share.html
@@ -98,13 +98,14 @@
             }
         },
         "vfsObjects": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
+            "prototype": "blue-shark/ui/field-multiple-select.reel",
             "properties": {
                 "element": {"#": "vfsObjects"},
-                "label": "VFS objects"
+                "label": "VFS objects",
+                "placeholderValue": "vfs value"
             },
             "bindings": {
-                "value": {"<->": "@owner.properties.vfs_objects"}
+                "values": {"<->": "@owner.properties.vfs_objects"}
             }
         },
         "advancedSection": {
