changes binding on has-confirmation allow for confirmation message to transition out

--- a/ui/main-sidebar/main-sidebar.reel/main-sidebar.html
+++ b/ui/main-sidebar/main-sidebar.reel/main-sidebar.html
@@ -10,7 +10,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "classList.has('has-confirmation')": {"<-": "!!@owner.confirmationMessage"}
+                "classList.has('has-confirmation')": {"<-": "!!@owner._confirmationDeferred"}
             },
             "listeners": [
                 {
