Migrate vms section to new architecture

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -94,7 +94,7 @@
             }
         },
         "virtualization": {
-            "prototype": "../virtualization/virtualization.reel",
+            "prototype": "ui/sections/vms/vms.reel",
             "properties": {
                 "element": {"#": "virtualization"}
             }
