--- a/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device-disk.reel/virtual-machine-device-disk.html
+++ b/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device-disk.reel/virtual-machine-device-disk.html
@@ -35,7 +35,7 @@
                 "converter": {"@": "sizeConverter"}
             },
             "bindings": {
-                "value": {"<->": "@owner.diskSize"}
+                "value": {"<->": "@owner.object._diskSize"}
             }
         },
         "diskMode": {
