--- a/ui/controls/list.reel/list-item.reel/list-item.html
+++ b/ui/controls/list.reel/list-item.reel/list-item.html
@@ -25,7 +25,7 @@
                 "element": {"#": "label"}
             },
             "bindings": {
-                "value": {"<-": "@owner.isCollection ? path(@owner.userInterfaceDescriptor.collectionNameExpression) : @owner.object.path(@owner.userInterfaceDescriptor.nameExpression)"}
+                "value": {"<-": "@owner.name.defined() ? @owner.name : @owner.isCollection ? path(@owner.userInterfaceDescriptor.collectionNameExpression) : @owner.object.path(@owner.userInterfaceDescriptor.nameExpression)"}
             }
         },
         "imageComponent": {
