remove 2-way binding.

--- a/ui/inspectors/snapshot.reel/snapshot.html
+++ b/ui/inspectors/snapshot.reel/snapshot.html
@@ -111,7 +111,7 @@
             },
             "bindings": {
                 "value": {"<->": "@owner.expirationDate"},
-                "disabled": {"<->": "@neverExpireCheckbox.checked"}
+                "disabled": {"<-": "@neverExpireCheckbox.checked"}
             }
         },
         "neverExpireCheckbox": {
